changing tests to run